Auth service: - Update prefix route - Update api doc
User ui:
- Add sign up page
- Add login page
